--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -105,18 +105,20 @@
      "text": [
       "[[0 1 2]\n",
       " [3 4 5]]\n",
+      "(2, 3)\n",
       "[[0 0 0]\n",
       " [0 0 0]]\n",
       "[[1 1 1]\n",
       " [1 1 1]]\n",
-      "[[0.83091504 0.06787112]\n",
-      " [0.32085223 0.36312516]\n",
-      " [0.25933317 0.31290935]]\n"
+      "[[0.12214892 0.92064474]\n",
+      " [0.48566198 0.09229219]\n",
+      " [0.41269863 0.04423436]]\n"
      ]
     }
    ],
    "source": [
     "print(m)\n",
+    "print(m.shape)\n",
     "print(np.zeros_like(m))\n",
     "print(np.ones_like(m))\n",
     "print(np.random.rand(3, 2)) # Raw arguments, not tuple"
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
