Add to LU decomposition

--- a/lu_decomposition.ipynb
+++ b/lu_decomposition.ipynb
@@ -1,12 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LU decomposition\n",
+    "My notes for UCL [Math0058 - Computational Methods](https://tbetcke.github.io/math0058_lecture_notes/python_lu_decomposition.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import scipy as sp\n",
     "\n",
     "np.random.seed(0)\n",
     "np.set_printoptions(precision=2)"
@@ -14,18 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[6. 1. 3. 4. 9.]\n",
-      " [2. 4. 4. 4. 8.]\n",
-      " [1. 2. 1. 5. 8.]\n",
-      " [4. 3. 8. 3. 1.]\n",
-      " [1. 5. 6. 6. 7.]]\n"
+      "[[6. 1. 4. 4.]\n",
+      " [8. 4. 6. 3.]\n",
+      " [5. 8. 7. 9.]\n",
+      " [9. 2. 7. 8.]]\n"
      ]
     }
    ],
@@ -34,13 +49,20 @@
     "    M = np.random.randint(low=1, high=10, size=(n,n))\n",
     "    return M.astype(np.float64)\n",
     "\n",
-    "A = generate_matrix(5)\n",
+    "A = generate_matrix(4)\n",
     "print(A)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The LU algorithm"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,23 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.    0.    0.    0.    0.  ]\n",
-      " [ 0.67  1.    0.    0.    0.  ]\n",
-      " [ 1.17  1.47  1.    0.    0.  ]\n",
-      " [ 1.33  1.25  0.85  1.    0.  ]\n",
-      " [ 1.5   0.66 -0.58  9.16  1.  ]]\n",
-      "[[ 6.    1.    4.    4.    8.  ]\n",
-      " [ 0.    5.33  0.33  2.33  2.67]\n",
-      " [ 0.    0.    3.84 -6.09 -6.25]\n",
-      " [ 0.    0.    0.   -1.1  -2.72]\n",
-      " [ 0.    0.    0.    0.   11.5 ]]\n"
+      "[[1.   0.   0.   0.  ]\n",
+      " [1.33 1.   0.   0.  ]\n",
+      " [0.83 2.69 1.   0.  ]\n",
+      " [1.5  0.19 0.47 1.  ]]\n",
+      "[[ 6.    1.    4.    4.  ]\n",
+      " [ 0.    2.67  0.67 -2.33]\n",
+      " [ 0.    0.    1.87 11.94]\n",
+      " [ 0.    0.    0.   -3.13]]\n"
      ]
     }
    ],
@@ -88,6 +108,110 @@
     "assert np.allclose(L @ U, A)\n",
     "print(L)\n",
     "print(U)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Speed comparison\n",
+    "Obviously we should avoid doing calculation in python at all costs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_lu(n):\n",
+    "    A = generate_matrix(n)\n",
+    "    python_lu = %timeit -q -o lu(A)\n",
+    "    scipy_lu = %timeit -q -o sp.linalg.lu(A)\n",
+    "    print(f\"Python time: {python_lu}\")\n",
+    "    print(f\"Scipy time: {scipy_lu}\")\n",
+    "    print(f\"Ratio: {python_lu.best/scipy_lu.best}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For small `n` our implementation is fine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python time: 36.3 µs ± 925 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n",
+      "Scipy time: 17.7 µs ± 641 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
+      "Ratio: 2.034737396941132\n"
+     ]
+    }
+   ],
+   "source": [
+    "compare_lu(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But for large `n` it is very slow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python time: 398 ms ± 8.67 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "Scipy time: 9.28 ms ± 1.05 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "Ratio: 47.221089904729716\n"
+     ]
+    }
+   ],
+   "source": [
+    "compare_lu(500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Determinants\n",
+    "Once we have found the LU decomposition, it can be used to cheaply find the determinant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-94.00000000000003\n"
+     ]
+    }
+   ],
+   "source": [
+    "detA = sp.linalg.det(A)\n",
+    "detL = L.diagonal().prod()\n",
+    "detU = U.diagonal().prod()\n",
+    "assert np.isclose(detA, detL * detU)\n",
+    "print(detA)\n"
    ]
   }
  ],
