Clarify lu algorithm

--- a/lu_decomposition.ipynb
+++ b/lu_decomposition.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +76,9 @@
     "\n",
     "    for col in range(n-1):\n",
     "        for row in range(col + 1, n):\n",
-    "            L[row, col] = U[row, col] / U[col, col]\n",
-    "            U[row, col:] -= L[row, col] * U[col, col:]\n",
+    "            multiplier = U[row, col] / U[col, col]\n",
+    "            L[row, col] = multiplier\n",
+    "            U[row, col:] -= multiplier * U[col, col:]\n",
     "            U[row, col] = 0\n",
     "\n",
     "    return (L, U)"
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
