Generate df in function

--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -10,10 +10,10 @@
      "output_type": "stream",
      "text": [
       "     Item    Weight     Value\n",
-      "0  Item 0  5.939322  4.914473\n",
-      "1  Item 1  7.436704  4.196634\n",
-      "2  Item 2  6.424870  2.845917\n",
-      "3  Item 3  5.903949  4.122117\n"
+      "0  item 0  5.939322  4.914473\n",
+      "1  item 1  7.436704  4.196634\n",
+      "2  item 2  6.424870  2.845917\n",
+      "3  item 3  5.903949  4.122117\n"
      ]
     }
    ],
@@ -23,19 +23,16 @@
     "\n",
     "np.random.seed(0)\n",
     "\n",
-    "NUM_ITEMS = 20\n",
-    "WEIGHT_RANGE = (1, 10)\n",
-    "VALUE_RANGE = (1, 5)\n",
+    "def generate_item_df(num_items = 20, weight_range = (1, 10), value_range = (1, 5)):\n",
+    "    weights = np.random.uniform(*weight_range, num_items)\n",
+    "    values = np.random.uniform(*value_range, num_items)\n",
+    "    return pd.DataFrame({\n",
+    "        'Item': [f'item {i}' for i in range(num_items)],\n",
+    "        'Weight': weights,\n",
+    "        'Value': values\n",
+    "    })\n",
     "\n",
-    "weights = np.random.uniform(*WEIGHT_RANGE, NUM_ITEMS)\n",
-    "values = np.random.uniform(*VALUE_RANGE, NUM_ITEMS)\n",
-    "\n",
-    "df = pd.DataFrame({\n",
-    "    'Item': [f'Item {i}' for i in range(NUM_ITEMS)],\n",
-    "    'Weight': weights,\n",
-    "    'Value': values\n",
-    "})\n",
-    "\n",
+    "df = generate_item_df()\n",
     "print(df.head(4))"
    ]
   }
