Fix random seed

--- a/BASC0047/coursework.ipynb
+++ b/BASC0047/coursework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -38,38 +38,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Items: ['item 0', 'item 3', 'item 11', 'item 15', 'item 16', 'item 18']\n",
-      "Total weight: 28.572864492919585\n",
-      "Total value: 24.827442025065434\n",
+      "Items: ['item 0', 'item 3', 'item 7', 'item 11', 'item 15', 'item 16']\n",
+      "Total weight: 29.59541074140965\n",
+      "Total value: 24.83112537920527\n",
       "\n",
-      "Items: ['item 0', 'item 1', 'item 7', 'item 11', 'item 15']\n",
-      "Total weight: 29.94620081482642\n",
-      "Total value: 21.457260040036658\n",
+      "Items: ['item 0', 'item 3', 'item 7', 'item 11', 'item 15', 'item 16']\n",
+      "Total weight: 29.59541074140965\n",
+      "Total value: 24.83112537920527\n",
       "\n",
-      "Items: ['item 0', 'item 1', 'item 3', 'item 11', 'item 14', 'item 15', 'item 16']\n",
-      "Total weight: 29.645482555503687\n",
-      "Total value: 25.324243169619255\n",
+      "Items: ['item 0', 'item 3', 'item 9', 'item 14', 'item 15', 'item 16', 'item 18']\n",
+      "Total weight: 28.903108408356424\n",
+      "Total value: 24.464314229036084\n",
       "\n",
-      "Items: ['item 0', 'item 3', 'item 7', 'item 9', 'item 14', 'item 15', 'item 16']\n",
-      "Total weight: 29.92565465684649\n",
-      "Total value: 24.467997583175922\n",
+      "Items: ['item 0', 'item 3', 'item 7', 'item 11', 'item 15', 'item 16']\n",
+      "Total weight: 29.59541074140965\n",
+      "Total value: 24.83112537920527\n",
       "\n",
-      "Items: ['item 0', 'item 3', 'item 11', 'item 15', 'item 16', 'item 18']\n",
-      "Total weight: 28.572864492919585\n",
-      "Total value: 24.827442025065434\n",
+      "Items: ['item 0', 'item 3', 'item 6', 'item 14', 'item 15', 'item 16', 'item 18']\n",
+      "Total weight: 29.39041964028866\n",
+      "Total value: 23.379079618710175\n",
       "\n"
      ]
     }
    ],
    "source": [
     "import random\n",
+    "\n",
+    "random.seed(0)\n",
     "\n",
     "def genetic_algorithm(df):\n",
     "    weights = df[\"Weight\"].tolist()\n",
